--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "client": "cd client && npm run dev",
-    "server": "cd backend && npm run dev"
+    "server": "cd backend && npm run dev",
+    "build": "cd client && build"
   },
   "author": "",
   "license": "ISC",
