script update test

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "client": "cd client && npm run dev",
     "server": "cd backend && npm run dev",
-    "build": "cd client && vite build"
+    "build": "cd client && npm run build"
   },
   "author": "",
   "license": "ISC",
