--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "client": "cd client && npm run dev",
-    "server": "cd backend && npm run dev",
-    "build": "cd client && npm run build"
+    "server": "cd backend && npm run dev"
   },
   "author": "",
   "license": "ISC",
