--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
   "buildCommand": "cd client && npm run build",
-  "outputDirectory": "client/dist"
+  "outputDirectory": "client/dist",
+  "installCommand": "cd client && npm install"
 }
